# PyStockManager

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  passenger_wsgi.py  pyproject.toml  requirements.txt  seed.py  utils.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
account/: admin.py  apps.py  models.py  signals.py
account/api/: serializers.py  urls.py  views.py
account/migrations/: 0001_initial.py  0002_historicalaccount_and_more.py  0003_delete_historicalaccounttransactionhistory.py  0004_historicalwithdraw.py  0005_delete_accounttransactionhistory.py  0006_alter_account_options_alter_accounttransfer_options_and_more.py  0007_alter_account_options_alter_accounttransfer_options_and_more.py
accounts/: admin.py  apps.py  models.py  signals.py
config/: admin.py
core/: asgi.py  context_processors.py  urls.py  wsgi.py
customer/: admin.py  models.py
entity/: admin.py  models.py
expence/: admin.py  apps.py
expense/: admin.py  models.py
inventory/: admin.py  apps.py  models.py  signals.py  urls.py  utils.py  views.py
mssports/: asgi.py  settings.py  urls.py  wsgi.py
nginx/: Dockerfile  nginx.conf
payment/: admin.py  forms.py  models.py  signals.py  urls.py  views.py
product/: admin.py  models.py  signals.py
purchase_invoice/: admin.py  apps.py  models.py  signals.py  test.py
receipt/: admin.py  apps.py  models.py  signals.py  test.py  urls.py  views.py
sale_invoice/: admin.py  apps.py  models.py  signals.py  tests.py  views.py
shop/: admin.py  models.py
supplier/: admin.py  models.py
(+206 files in other folders)
