[project]
name = "mssports"
version = "0.1.0"
description = ""
authors = [
    {name = "Ishan-Ravindu",email = "ishanravindu27596@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django (>=5.1.7,<6.0.0)",
    "django-jazzmin (>=3.0.1,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
